--- a/SantaClausAlert/SantaClausAlert.csproj
+++ b/SantaClausAlert/SantaClausAlert.csproj
@@ -130,6 +130,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="Assets\sound.wav" />
     <Content Include="model.onnx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
